[package]
name = "httpdate"
version = "1.0.0"
authors = ["Pyfisch <pyfisch@posteo.org>"]
license = "MIT/Apache-2.0"
description = "HTTP date parsing and formatting"
keywords = ["http", "date", "time", "simple", "timestamp"]
readme = "README.md"
repository = "https://github.com/pyfisch/httpdate"
edition = "2018"
